--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web con Bootstrap Curso",
   "main": "index.js",
   "scripts": {
-    "start": "node app",
+    "start": "gulp",
     "postinstall": "gulp default",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
