--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gamelayout",
   "version": "1.0.0",
   "description": "Web con Bootstrap Curso",
-  "main": "index.js",
+  "main": "gulpfile.js",
   "scripts": {    
     "test": "echo \"Error: no test specified\" && exit 1"
   },
