--- a/package.json
+++ b/package.json
@@ -2,18 +2,14 @@
   "name": "gamelayout",
   "version": "1.0.0",
   "description": "Web con Bootstrap Curso",
-  "main": "index.html",
+  "main": "index.js",
   "scripts": {
-    "start": "node app",
-    "postinstall": "gulp default",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.6"
-  },
-  "dependencies": {
+    "bootstrap": "^4.0.0-alpha.6",
     "browser-sync": "^2.19.0",
     "gulp": "^3.9.1",
     "gulp-sass": "^3.1.0"
