actu package.json 7

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Web con Bootstrap Curso",
   "main": "index.js",
   "scripts": {
+     "start": "gulp",
+     "postinstall": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
